Add Stripe subscription

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ CLERK_SECRET_KEY=""
 
 # Database
 DATABASE_URL=""
+
+# Stripe
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=""
+STRIPE_SECRET_KEY=""
+
+# Others
+NEXT_PUBLIC_SITE_URL=""
