--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@clerk/nextjs": "^4.29.8",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^3.0.6",
     "ai": "^2.2.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -25,9 +27,11 @@
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.2",
+    "stripe": "^14.19.0",
     "svix": "^1.20.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
